--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2018"
 [dependencies]
 structopt = { version = "0.3", default-features = false }
 anyhow = "1.0"
+regex = "1.4"
+once_cell = "1.5"
